// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`middlewares/keyValue should add element [elm4] 1`] = `
Object {
  "action": Object {
    "payload": Object {
      "code": "elm4",
      "infos": "elm4",
      "some": "other",
      "subinfos": Object {
        "info": "elm4",
      },
    },
    "type": "@@krf/ADD>TESTPREFIX>TESTNAME",
  },
  "state": Object {
    "data": Object {
      "elm1": Object {
        "code": "elm1",
        "infos": "elm1",
        "some": "other",
        "subinfos": Object {
          "info": "elm1",
        },
      },
      "elm2": Object {
        "code": "elm2",
        "infos": "elm2",
        "some": "other",
        "subinfos": Object {
          "info": "elm2",
        },
      },
      "elm3": Object {
        "code": "elm3",
        "infos": "elm3",
        "some": "other",
        "subinfos": Object {
          "info": "elm3",
        },
      },
      "elm4": Object {
        "code": "elm4",
        "infos": "elm4",
        "some": "other",
        "subinfos": Object {
          "info": "elm4",
        },
      },
    },
    "initialized": true,
  },
}
`;

exports[`middlewares/keyValue should add element [elm4] on initial store 1`] = `
Object {
  "action": Object {
    "payload": Object {
      "code": "elm4",
      "infos": "elm4",
      "some": "other",
      "subinfos": Object {
        "info": "elm4",
      },
    },
    "type": "@@krf/ADD>TESTPREFIX>TESTNAME",
  },
  "state": Object {
    "data": Object {
      "elm4": Object {
        "code": "elm4",
        "infos": "elm4",
        "some": "other",
        "subinfos": Object {
          "info": "elm4",
        },
      },
    },
    "initialized": true,
  },
}
`;

exports[`middlewares/keyValue should add element if not found [elm12] 1`] = `
Object {
  "action": Object {
    "payload": Object {
      "code": "elm12",
      "infos": "elm12",
      "some": "other",
      "subinfos": Object {
        "info": "elm12",
      },
    },
    "type": "@@krf/ADD_OR_UPDATE>TESTPREFIX>TESTNAME",
  },
  "state": Object {
    "data": Object {
      "elm1": Object {
        "code": "elm1",
        "infos": "elm1",
        "some": "other",
        "subinfos": Object {
          "info": "elm1",
        },
      },
      "elm12": Object {
        "code": "elm12",
        "infos": "elm12",
        "some": "other",
        "subinfos": Object {
          "info": "elm12",
        },
      },
      "elm2": Object {
        "code": "elm2",
        "infos": "elm2",
        "some": "other",
        "subinfos": Object {
          "info": "elm2",
        },
      },
      "elm3": Object {
        "code": "elm3",
        "infos": "elm3",
        "some": "other",
        "subinfos": Object {
          "info": "elm3",
        },
      },
    },
    "initialized": true,
  },
}
`;

exports[`middlewares/keyValue should add elements (not-found) [elm12, elm13] 1`] = `
Object {
  "action": Object {
    "payload": Array [
      Object {
        "code": "elm12",
        "infos": "elm12",
        "some": "other",
        "subinfos": Object {
          "info": "elm12",
        },
      },
      Object {
        "code": "elm13",
        "infos": "elm13",
        "some": "other",
        "subinfos": Object {
          "info": "elm13",
        },
      },
    ],
    "type": "@@krf/ADD_OR_UPDATE>TESTPREFIX>TESTNAME",
  },
  "state": Object {
    "data": Object {
      "elm1": Object {
        "code": "elm1",
        "infos": "elm1",
        "some": "other",
        "subinfos": Object {
          "info": "elm1",
        },
      },
      "elm12": Object {
        "code": "elm12",
        "infos": "elm12",
        "some": "other",
        "subinfos": Object {
          "info": "elm12",
        },
      },
      "elm13": Object {
        "code": "elm13",
        "infos": "elm13",
        "some": "other",
        "subinfos": Object {
          "info": "elm13",
        },
      },
      "elm2": Object {
        "code": "elm2",
        "infos": "elm2",
        "some": "other",
        "subinfos": Object {
          "info": "elm2",
        },
      },
      "elm3": Object {
        "code": "elm3",
        "infos": "elm3",
        "some": "other",
        "subinfos": Object {
          "info": "elm3",
        },
      },
    },
    "initialized": true,
  },
}
`;

exports[`middlewares/keyValue should add elements [elm4, elm5] 1`] = `
Object {
  "action": Object {
    "payload": Array [
      Object {
        "code": "elm4",
        "infos": "elm4",
        "some": "other",
        "subinfos": Object {
          "info": "elm4",
        },
      },
      Object {
        "code": "elm5",
        "infos": "elm5",
        "some": "other",
        "subinfos": Object {
          "info": "elm5",
        },
      },
    ],
    "type": "@@krf/ADD>TESTPREFIX>TESTNAME",
  },
  "state": Object {
    "data": Object {
      "elm1": Object {
        "code": "elm1",
        "infos": "elm1",
        "some": "other",
        "subinfos": Object {
          "info": "elm1",
        },
      },
      "elm2": Object {
        "code": "elm2",
        "infos": "elm2",
        "some": "other",
        "subinfos": Object {
          "info": "elm2",
        },
      },
      "elm3": Object {
        "code": "elm3",
        "infos": "elm3",
        "some": "other",
        "subinfos": Object {
          "info": "elm3",
        },
      },
      "elm4": Object {
        "code": "elm4",
        "infos": "elm4",
        "some": "other",
        "subinfos": Object {
          "info": "elm4",
        },
      },
      "elm5": Object {
        "code": "elm5",
        "infos": "elm5",
        "some": "other",
        "subinfos": Object {
          "info": "elm5",
        },
      },
    },
    "initialized": true,
  },
}
`;

exports[`middlewares/keyValue should add elements [elm4, elm5] on initial store 1`] = `
Object {
  "action": Object {
    "payload": Array [
      Object {
        "code": "elm4",
        "infos": "elm4",
        "some": "other",
        "subinfos": Object {
          "info": "elm4",
        },
      },
      Object {
        "code": "elm5",
        "infos": "elm5",
        "some": "other",
        "subinfos": Object {
          "info": "elm5",
        },
      },
    ],
    "type": "@@krf/ADD>TESTPREFIX>TESTNAME",
  },
  "state": Object {
    "data": Object {
      "elm4": Object {
        "code": "elm4",
        "infos": "elm4",
        "some": "other",
        "subinfos": Object {
          "info": "elm4",
        },
      },
      "elm5": Object {
        "code": "elm5",
        "infos": "elm5",
        "some": "other",
        "subinfos": Object {
          "info": "elm5",
        },
      },
    },
    "initialized": true,
  },
}
`;

exports[`middlewares/keyValue should initialize 1`] = `
Object {
  "state": Object {
    "data": Object {},
    "initialized": false,
  },
}
`;

exports[`middlewares/keyValue should initialize with defaultData 1`] = `
Object {
  "state": Object {
    "data": Object {
      "elm1": Object {
        "code": "elm1",
        "infos": "elm1",
        "some": "other",
        "subinfos": Object {
          "info": "elm1",
        },
      },
      "elm2": Object {
        "code": "elm2",
        "infos": "elm2",
        "some": "other",
        "subinfos": Object {
          "info": "elm2",
        },
      },
      "elmSub": Object {
        "code": "elmSub",
        "infos": "elmSub",
        "some": "other",
      },
    },
    "initialized": true,
  },
}
`;

exports[`middlewares/keyValue should not duplicate object with same key [elm2] 1`] = `
Object {
  "action": Object {
    "payload": Object {
      "code": "elm2",
      "infos": "elm2",
      "some": "other",
      "subinfos": Object {
        "info": "elm2",
      },
    },
    "type": "@@krf/ADD>TESTPREFIX>TESTNAME",
  },
  "state": Object {
    "data": Object {
      "elm1": Object {
        "code": "elm1",
        "infos": "elm1",
        "some": "other",
        "subinfos": Object {
          "info": "elm1",
        },
      },
      "elm2": Object {
        "code": "elm2",
        "infos": "elm2",
        "some": "other",
        "subinfos": Object {
          "info": "elm2",
        },
      },
      "elm3": Object {
        "code": "elm3",
        "infos": "elm3",
        "some": "other",
        "subinfos": Object {
          "info": "elm3",
        },
      },
    },
    "initialized": true,
  },
}
`;

exports[`middlewares/keyValue should not update element if not found [elm12] 1`] = `
Object {
  "action": Object {
    "payload": Object {
      "code": "elm12",
      "infos": "elm12",
      "some": "other",
      "subinfos": Object {
        "info": "elm12",
      },
    },
    "type": "@@krf/UPDATE>TESTPREFIX>TESTNAME",
  },
  "state": Object {
    "data": Object {
      "elm1": Object {
        "code": "elm1",
        "infos": "elm1",
        "some": "other",
        "subinfos": Object {
          "info": "elm1",
        },
      },
      "elm2": Object {
        "code": "elm2",
        "infos": "elm2",
        "some": "other",
        "subinfos": Object {
          "info": "elm2",
        },
      },
      "elm3": Object {
        "code": "elm3",
        "infos": "elm3",
        "some": "other",
        "subinfos": Object {
          "info": "elm3",
        },
      },
    },
    "initialized": false,
  },
}
`;

exports[`middlewares/keyValue should not update elements (not-found) [elm12, elm13] 1`] = `
Object {
  "action": Object {
    "payload": Array [
      Object {
        "code": "elm12",
        "infos": "elm12",
        "some": "other",
        "subinfos": Object {
          "info": "elm12",
        },
      },
      Object {
        "code": "elm13",
        "infos": "elm13",
        "some": "other",
        "subinfos": Object {
          "info": "elm13",
        },
      },
    ],
    "type": "@@krf/UPDATE>TESTPREFIX>TESTNAME",
  },
  "state": Object {
    "data": Object {
      "elm1": Object {
        "code": "elm1",
        "infos": "elm1",
        "some": "other",
        "subinfos": Object {
          "info": "elm1",
        },
      },
      "elm2": Object {
        "code": "elm2",
        "infos": "elm2",
        "some": "other",
        "subinfos": Object {
          "info": "elm2",
        },
      },
      "elm3": Object {
        "code": "elm3",
        "infos": "elm3",
        "some": "other",
        "subinfos": Object {
          "info": "elm3",
        },
      },
    },
    "initialized": false,
  },
}
`;

exports[`middlewares/keyValue should remove element [elm1] 1`] = `
Object {
  "action": Object {
    "payload": "elm1",
    "type": "@@krf/REMOVE>TESTPREFIX>TESTNAME",
  },
  "state": Object {
    "data": Object {
      "elm2": Object {
        "code": "elm2",
        "infos": "elm2",
        "some": "other",
        "subinfos": Object {
          "info": "elm2",
        },
      },
      "elm3": Object {
        "code": "elm3",
        "infos": "elm3",
        "some": "other",
        "subinfos": Object {
          "info": "elm3",
        },
      },
    },
    "initialized": true,
  },
}
`;

exports[`middlewares/keyValue should remove element by its reference [elm1] 1`] = `
Object {
  "action": Object {
    "payload": Object {
      "code": "elm1",
      "infos": "elm1",
      "some": "other",
      "subinfos": Object {
        "info": "elm1",
      },
    },
    "type": "@@krf/REMOVE>TESTPREFIX>TESTNAME",
  },
  "state": Object {
    "data": Object {
      "elm2": Object {
        "code": "elm2",
        "infos": "elm2",
        "some": "other",
        "subinfos": Object {
          "info": "elm2",
        },
      },
      "elm3": Object {
        "code": "elm3",
        "infos": "elm3",
        "some": "other",
        "subinfos": Object {
          "info": "elm3",
        },
      },
    },
    "initialized": true,
  },
}
`;

exports[`middlewares/keyValue should remove elements [elm1, elm2] 1`] = `
Object {
  "action": Object {
    "payload": Array [
      "elm1",
      "elm2",
    ],
    "type": "@@krf/REMOVE>TESTPREFIX>TESTNAME",
  },
  "state": Object {
    "data": Object {
      "elm3": Object {
        "code": "elm3",
        "infos": "elm3",
        "some": "other",
        "subinfos": Object {
          "info": "elm3",
        },
      },
    },
    "initialized": true,
  },
}
`;

exports[`middlewares/keyValue should remove elements by their references [elm1, elm2] 1`] = `
Object {
  "action": Object {
    "payload": Array [
      Object {
        "code": "elm1",
        "infos": "elm1",
        "some": "other",
        "subinfos": Object {
          "info": "elm1",
        },
      },
      Object {
        "code": "elm2",
        "infos": "elm2",
        "some": "other",
        "subinfos": Object {
          "info": "elm2",
        },
      },
    ],
    "type": "@@krf/REMOVE>TESTPREFIX>TESTNAME",
  },
  "state": Object {
    "data": Object {
      "elm3": Object {
        "code": "elm3",
        "infos": "elm3",
        "some": "other",
        "subinfos": Object {
          "info": "elm3",
        },
      },
    },
    "initialized": true,
  },
}
`;

exports[`middlewares/keyValue should reset state 1`] = `
Object {
  "action": Object {
    "type": "@@krf/RESET>TESTPREFIX>TESTNAME",
  },
  "state": Object {
    "data": Object {},
    "initialized": false,
  },
}
`;

exports[`middlewares/keyValue should set element [elm1] 1`] = `
Object {
  "action": Object {
    "payload": Object {
      "code": "elm1",
      "infos": "elm1",
      "some": "other",
      "subinfos": Object {
        "info": "elm1",
      },
    },
    "type": "@@krf/SET>TESTPREFIX>TESTNAME",
  },
  "state": Object {
    "data": Object {
      "elm1": Object {
        "code": "elm1",
        "infos": "elm1",
        "some": "other",
        "subinfos": Object {
          "info": "elm1",
        },
      },
    },
    "initialized": true,
  },
}
`;

exports[`middlewares/keyValue should set elements [elm1,elm2] 1`] = `
Object {
  "action": Object {
    "payload": Array [
      Object {
        "code": "elm1",
        "infos": "elm1",
        "some": "other",
        "subinfos": Object {
          "info": "elm1",
        },
      },
      Object {
        "code": "elm2",
        "infos": "elm2",
        "some": "other",
        "subinfos": Object {
          "info": "elm2",
        },
      },
    ],
    "type": "@@krf/SET>TESTPREFIX>TESTNAME",
  },
  "state": Object {
    "data": Object {
      "elm1": Object {
        "code": "elm1",
        "infos": "elm1",
        "some": "other",
        "subinfos": Object {
          "info": "elm1",
        },
      },
      "elm2": Object {
        "code": "elm2",
        "infos": "elm2",
        "some": "other",
        "subinfos": Object {
          "info": "elm2",
        },
      },
    },
    "initialized": true,
  },
}
`;

exports[`middlewares/keyValue should update an element [elm3] 1`] = `
Object {
  "action": Object {
    "payload": Object {
      "code": "elm3",
      "some": "other UPDATE",
    },
    "type": "@@krf/UPDATE>TESTPREFIX>TESTNAME",
  },
  "state": Object {
    "data": Object {
      "elm1": Object {
        "code": "elm1",
        "infos": "elm1",
        "some": "other",
        "subinfos": Object {
          "info": "elm1",
        },
      },
      "elm2": Object {
        "code": "elm2",
        "infos": "elm2",
        "some": "other",
        "subinfos": Object {
          "info": "elm2",
        },
      },
      "elm3": Object {
        "code": "elm3",
        "infos": "elm3",
        "some": "other UPDATE",
        "subinfos": Object {
          "info": "elm3",
        },
      },
    },
    "initialized": true,
  },
}
`;

exports[`middlewares/keyValue should update element [elm3] 1`] = `
Object {
  "action": Object {
    "payload": Object {
      "code": "elm3",
      "some": "other ADD OR UPDATE",
    },
    "type": "@@krf/ADD_OR_UPDATE>TESTPREFIX>TESTNAME",
  },
  "state": Object {
    "data": Object {
      "elm1": Object {
        "code": "elm1",
        "infos": "elm1",
        "some": "other",
        "subinfos": Object {
          "info": "elm1",
        },
      },
      "elm2": Object {
        "code": "elm2",
        "infos": "elm2",
        "some": "other",
        "subinfos": Object {
          "info": "elm2",
        },
      },
      "elm3": Object {
        "code": "elm3",
        "infos": "elm3",
        "some": "other ADD OR UPDATE",
        "subinfos": Object {
          "info": "elm3",
        },
      },
    },
    "initialized": true,
  },
}
`;

exports[`middlewares/keyValue should update elements [elm2, elm3] 1`] = `
Object {
  "action": Object {
    "payload": Array [
      Object {
        "code": "elm2",
        "update": "elm2 is updated",
      },
      Object {
        "code": "elm3",
        "update": "elm3 is updated",
      },
    ],
    "type": "@@krf/UPDATE>TESTPREFIX>TESTNAME",
  },
  "state": Object {
    "data": Object {
      "elm1": Object {
        "code": "elm1",
        "infos": "elm1",
        "some": "other",
        "subinfos": Object {
          "info": "elm1",
        },
      },
      "elm2": Object {
        "code": "elm2",
        "infos": "elm2",
        "some": "other",
        "subinfos": Object {
          "info": "elm2",
        },
        "update": "elm2 is updated",
      },
      "elm3": Object {
        "code": "elm3",
        "infos": "elm3",
        "some": "other",
        "subinfos": Object {
          "info": "elm3",
        },
        "update": "elm3 is updated",
      },
    },
    "initialized": true,
  },
}
`;

exports[`middlewares/keyValue should update elements [elm2, elm3] 2`] = `
Object {
  "action": Object {
    "payload": Array [
      Object {
        "code": "elm2",
        "update": "elm2 is updated",
      },
      Object {
        "code": "elm3",
        "update": "elm3 is updated",
      },
    ],
    "type": "@@krf/ADD_OR_UPDATE>TESTPREFIX>TESTNAME",
  },
  "state": Object {
    "data": Object {
      "elm1": Object {
        "code": "elm1",
        "infos": "elm1",
        "some": "other",
        "subinfos": Object {
          "info": "elm1",
        },
      },
      "elm2": Object {
        "code": "elm2",
        "infos": "elm2",
        "some": "other",
        "subinfos": Object {
          "info": "elm2",
        },
        "update": "elm2 is updated",
      },
      "elm3": Object {
        "code": "elm3",
        "infos": "elm3",
        "some": "other",
        "subinfos": Object {
          "info": "elm3",
        },
        "update": "elm3 is updated",
      },
    },
    "initialized": true,
  },
}
`;
